# gravis

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: book.yml  ci.yml
artifacts/benchmarks/: m1_kepler_diag.csv  m1_plummer_1k_diag.csv  m3_accuracy.csv  m3_scaling.csv
book/: book.toml  custom.css  custom.js
book/src/: SUMMARY.md  appendix_verification.md  ch01_gravity.md  ch02_integrators.md  ch03_barnes_hut.md  ch04_parallel.md  ch05_rendering.md  ch06_scenarios.md  ch07_sph.md  ch08_shocks.md  intro.md
crates/headless/: Cargo.toml
crates/headless/src/: main.rs
crates/native-app/: Cargo.toml
crates/native-app/src/: app.rs  main.rs  sim_thread.rs
crates/native-app/src/render/: axes.rs  camera.rs  mod.rs  particles.rs  renderer.rs  ui.rs
crates/render-core/: Cargo.toml
crates/render-core/src/: axes.rs  bloom.rs  camera.rs  color.rs  gpu_types.rs  lib.rs  particles.rs  tonemap.rs
crates/sim-core/: Cargo.toml
crates/sim-core/benches/: gravity.rs
crates/sim-core/src/: barnes_hut.rs  diagnostics.rs  gravity.rs  integrator.rs  lib.rs  octree.rs  particle.rs  scenario.rs  scenario_builder.rs  snapshot.rs  units.rs
crates/sim-core/src/scenarios/: cold_collapse.rs  evrard_collapse.rs  galaxy_collision.rs  kelvin_helmholtz.rs  mod.rs  plummer_sphere.rs  protoplanetary.rs  sedov_blast.rs  sod_shock.rs  two_body.rs
crates/sim-core/src/sph/: boundary.rs  density.rs  forces.rs  kernel.rs  mod.rs  neighbors.rs  solver.rs
crates/sim-core/tests/: barnes_hut.rs  cold_collapse_gas.rs  conservation.rs  determinism.rs  evrard_collapse.rs  galaxy.rs  kelvin_helmholtz.rs  kepler.rs  m3_artifacts.rs  plummer.rs  protoplanetary.rs  scaling.rs  sedov_blast.rs  sequential_parity.rs  sod_shock.rs
crates/web-app/: Cargo.toml
crates/web-app/src/: lib.rs
crates/web-app/static/: index.html
crates/web-app/static/demos/: plummer.html  sedov-blast.html  sod-shock.html  two-body.html
docs/: PLAN.md
docs/adr/: 001-workspace-layout.md  002-f64-simulation.md  003-integrator-choice.md  004-sim-render-threads.md  005-barnes-hut-design.md  006-galaxy-model.md  006-web-target-architecture.md  007-hdr-bloom-pipeline.md
scripts/: build_book.sh  plot_m3_scaling.py
