[workspace]
resolver = "2"
members = [
    "crates/sim-core",
    "crates/render-core",
    "crates/headless",
    "crates/native-app",
    "crates/web-app",
]
default-members = [
    "crates/sim-core",
    "crates/render-core",
    "crates/headless",
    "crates/native-app",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
