[package]
name = "native-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sim-core = { path = "../sim-core" }
clap = { version = "4", features = ["derive"] }
wgpu = "27"
winit = "0.30"
pollster = "0.4"
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = "0.33"
egui_plot = "0.34"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.29"
image = { version = "0.25", default-features = false, features = ["png"] }
log = "0.4"
env_logger = "0.11"
