[package]
name = "sim-core"
version.workspace = true
edition.workspace = true

[features]
default = ["parallel"]
parallel = ["rayon"]

[dependencies]
rand = "0.9"
rand_chacha = "0.9"
rayon = { version = "1.10", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "gravity"
harness = false
