[package]
name = "web-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
sim-core = { path = "../sim-core", default-features = false }
render-core = { path = "../render-core" }
wgpu = "27"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.29"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
    "KeyboardEvent",
    "MouseEvent",
    "WheelEvent",
    "HtmlSelectElement",
    "HtmlInputElement",
    "HtmlElement",
    "Performance",
    "EventTarget",
    "AddEventListenerOptions",
] }
js-sys = "0.3"
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
